# Scopa

./: .gitignore  CMakeLists.txt  Card.cpp  Card.h  Makefile  State.h  scopaxx
src/: Card.cpp  Card.h  Deck.cpp  Deck.h  Game.cpp  Game.h  SimulationLock.h  State.cpp  State.h  SynchronizedQueue.cpp  SynchronizedQueue.h  ThreadPool.cpp  ThreadPool.h  main.cpp
